--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.4",
-        "illuminate/database": "^7.0|^8.0|^9.0|^10.0|^11.0",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0"
+        "illuminate/database": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0"
     }
 }
